--- a/admin/css/styles_ng_admin.css.less
+++ b/admin/css/styles_ng_admin.css.less
@@ -243,13 +243,30 @@
     top: 8px;
     text-decoration: underline;
 }
-.sation-lang-download-popup{
+.station-lang-download-popup{
   padding: 32px;
 }
 .language-editor>div.ngdialog-content{
   width: 75% !important;
-  height: 105%;
   overflow: hidden;
+}
+.station-lang-filter{
+  position:relative;
+  right:15px;
+}
+
+.station-lang-header{
+  margin-bottom:-25px;
+}
+.station-lang-content{
+  overflow-y: scroll;
+  height:75%;
+}
+.station-lang-footer{
+  margin-top:5px;
+    position: relative;
+    bottom: 0;
+    left: 38%;
 }
 
 .first-letter-capitalize {
