--- a/admin/partials/interfaces/CRS/adCRSCommonSetup.html
+++ b/admin/partials/interfaces/CRS/adCRSCommonSetup.html
@@ -7,47 +7,10 @@
         </fieldset>
     </div>
 
-    <fieldset class="holder full-width" ng-if="config.enabled">
-        <div class="form-title">
-            <h3>Synchronize Data</h3>
-        </div>
-        <fieldset class="holder left">
-            <div class="entry has-datepicker margin">
-                <label>{{'FROM_DATE' | translate}}
-                </label>
-                <input type="text" ui-date="startDatePickerOptions"
-                       ng-model="sync.start_date"
-                       placeholder="Select Start Date"
-                       class="date-picker-input-small"
-                       readonly>
-            </div>
-            <div class="entry has-datepicker margin">
-                <label>{{'TO_DATE' | translate}}
-                </label>
-                <input type="text" ui-date="endDatePickerOptions"
-                       ng-model="sync.end_date"
-                       placeholder="Select End Date"
-                       class="date-picker-input-small"
-                       readonly>
-            </div>
-            <div class="entry full-width">
-                <label>
-                    Synchronize
-                </label>
-                <button type="button" like-type="common" class="button ng-binding blue sm-refresh-btn"
-                        ng-click="startSync()"
-                        ng-class="{'grey' : !sync.start_date || !sync.end_date}"
-                        ng-disabled="!sync.start_date || !sync.end_date"
-                        translate>
-                    SYNC
-                </button>
-            </div>
-        </fieldset>
-        <fieldset class="holder right">
-            <ad-checkbox ng-repeat="item in sync.items" is-checked="item.isSelected" label="{{item.id | uppercase}}"
-                         div-class="full-width"></ad-checkbox>
-        </fieldset>
-    </fieldset>
+    <ad-sync-block ng-if="config.enabled"
+                   interface="interface"
+                   sync-items-list="config.full_sync_items">
+    </ad-sync-block>
 
     <fieldset class="holder full-width">
         <div class="form-title">
