--- a/admin/partials/interfaces/Duetto/adDuettoSetup.html
+++ b/admin/partials/interfaces/Duetto/adDuettoSetup.html
@@ -1,8 +1,6 @@
 <ad-common-parts-in-form-dir on-save-button-click="saveInterfaceConfig"
                              header-caption="{{'DUETTO_SETUP_HEADER'|translate}}">
-    <div class="form-title full-width">
-        <h3><span translate>DUETTO_SUB_TITLE</span></h3>
-    </div>
+
     <div class="entry full-width">
         <label><span translate>ACTIVATE_INACTIVATE</span></label>
         <div name="active-inactive-toggle" class="switch-button single" ng-class="{ on: config.enabled }"
@@ -10,6 +8,14 @@
             <input type="checkbox">
             <span class="switch-icon"></span>
         </div>
+    </div>
+
+    <ad-sync-block ng-if="config.enabled"
+                   sync-items-list="sync.items">
+    </ad-sync-block>
+
+    <div class="form-title full-width">
+        <h3><span translate>DUETTO_SUB_TITLE</span></h3>
     </div>
 
     <fieldset class="holder left">
