CICO-35829 Integrated API changes for sync

--- a/admin/partials/interfaces/CRS/adCRSCommonSetup.html
+++ b/admin/partials/interfaces/CRS/adCRSCommonSetup.html
@@ -9,7 +9,7 @@
 
     <ad-sync-block ng-if="config.enabled"
                    interface="interface"
-                   sync-items-list="config.full_sync_items">
+                   config="config">
     </ad-sync-block>
 
     <fieldset class="holder full-width">
