--- a/admin/partials/interfaces/Duetto/adDuettoSetup.html
+++ b/admin/partials/interfaces/Duetto/adDuettoSetup.html
@@ -11,7 +11,7 @@
     </div>
 
     <ad-sync-block ng-if="config.enabled"
-                   sync-items-list="sync.items">
+                   config="config">
     </ad-sync-block>
 
     <div class="form-title full-width">
