CICO-34119 adds sohotel theme to Zest Station

--- a/zest_station/css/less/layout.less
+++ b/zest_station/css/less/layout.less
@@ -1404,8 +1404,8 @@
             height: 50px;
             font-size: 16px;
             &.selected  {
-                color: @actionBackground;
-                background: transparent;
+                color: @actionBackground !important;
+                background: transparent !important;
             }
         }
     }
