--- a/guestweb/common_templates/partials/MGM/gwArrivalTime.html
+++ b/guestweb/common_templates/partials/MGM/gwArrivalTime.html
@@ -38,7 +38,9 @@
 
              <!--  -->
             <div class="section-container mob-padding-bottom-10">
-                <p class="sub-text left-align">ESTIMATED ARRIVAL TIME</span>
+                <p class="sub-text left-align">ESTIMATED ARRIVAL TIME</p>
+                <span ng-show="showHotelTime" class="sub-main-text">(Please select an arrival time. Your arrival time options are displayed in the hotel’s local time. It is currently  {{hotelTime}} in the hotel’s local time.)</span></p>
+                <br/><br/>
                 <div class="row">
                     <div class="eta-container">
                         <div class="select-style">
