CICO-35829: New full sync UI and API

--- a/admin/partials/interfaces/CRS/adCRSCommonSetup.html
+++ b/admin/partials/interfaces/CRS/adCRSCommonSetup.html
@@ -8,7 +8,7 @@
     </div>
 
     <ad-sync-block ng-if="config.enabled"
-                   interface="interface"
+                   interface="{{interface}}"
                    config="config">
     </ad-sync-block>
 
