--- a/admin/partials/interfaces/Duetto/adDuettoSetup.html
+++ b/admin/partials/interfaces/Duetto/adDuettoSetup.html
@@ -11,6 +11,7 @@
     </div>
 
     <ad-sync-block ng-if="config.enabled"
+                   interface="{{interface}}"
                    config="config">
     </ad-sync-block>
 
