CICO-36120 Adding two new fields to comtrol set up

--- a/admin/partials/IFCComtrol/adIFCComtrolSetup.html
+++ b/admin/partials/IFCComtrol/adIFCComtrolSetup.html
@@ -45,7 +45,13 @@
                         <ad-textbox inputtype="password" value="ifc_comtrol.password" label="{{'IFC_COMTROL_KEY_SYSTEM_PASSWORD' | translate}}" styleclass="full-width" ng-if="ifc_comtrol.enabled"></ad-textbox>
                     </fieldset>
                     <fieldset class="holder right">
-                        <ad-textbox inputtype="text" value="ifc_comtrol.access_level" name="access_level" id="access_level" label="{{'IFC_COMTROL_KEY_SYSTEM_ACCESS_LEVEL' | translate}}" styleclass="full-width" ng-if="ifc_comtrol.enabled"></ad-textbox>
+                        <ad-textbox inputtype="text" value="ifc_comtrol.access_level" label="{{'IFC_COMTROL_KEY_SYSTEM_ACCESS_LEVEL' | translate}}" styleclass="full-width" ng-if="ifc_comtrol.enabled"></ad-textbox>
+                    </fieldset>
+                    <fieldset class="holder left">
+                        <ad-textbox inputtype="text" value="ifc_comtrol.room_type" label="{{'IFC_COMTROL_DEFAULT_ROOM_TYPE' | translate}}" styleclass="full-width" ng-if="ifc_comtrol.enabled"></ad-textbox>
+                    </fieldset>
+                    <fieldset class="holder right">
+                        <ad-textbox inputtype="text" value="ifc_comtrol.language" label="{{'IFC_COMTROL_LANGUAGE' | translate}}" styleclass="full-width" ng-if="ifc_comtrol.enabled"></ad-textbox>
                     </fieldset>
                 </div>
             </fieldset>
