--- a/rover/partials/reports/comparisonStatReport/rvComparisonStatReportRow.html
+++ b/rover/partials/reports/comparisonStatReport/rvComparisonStatReportRow.html
@@ -32,13 +32,70 @@
     <td>Last Year YTD</td>
     <td>Variance</td>
 </tr>
-<tr ng-repeat="item in cgEntries">
-	<td class="code long-code break"><em>{{ item.section }}</em></td>
-	<td class="break">{{ item.today | currency:currencySymbol:2 }}</td>
-	<td>{{ item.mtd | currency:currencySymbol:2 }}</td>
-	<td>{{ item.last_year_mtd | currency:currencySymbol:2 }}</td>
-	<td class="break" ng-class="{ 'red': item.mtd_variance < 0 }">{{ item.mtd_variance | currency:currencySymbol:2 }}</td>
-	<td>{{ item.ytd | currency:currencySymbol:2 }}</td>
-	<td>{{ item.last_year_ytd | currency:currencySymbol:2 }}</td>
-	<td ng-class="{ 'red': item.ytd_variance < 0 }">{{ item.ytd_variance | currency:currencySymbol:2 }}</td>
+<tr ng-repeat="item in cgEntries track by $index"
+  ng-class="{
+    'charge-group': item.isChargeGroup,
+    'toggle': item.isChargeGroup,
+    'active': item.chageGroupActive,
+
+    'charge-code': item.isChargeCode,
+    'hidden': item.isChargeCode && !item.chageGroupActive
+    'charge-pagination': item.isChargeCodePagination,
+
+    'odd': $odd,
+    'even': $even,
+    'last': (item.isChargeCode && $last)
+  }"
+  ng-click="toggleChargeCode(item)"
+>
+  <td ng-if="item.isChargeCodePagination" colspan="8">
+    <rv-pagination page-options="{
+      id: item.id.toString(),
+      api: [fetchChargeCodes, item]
+    }"></rv-pagination>
+  </td>
+
+	<td ng-if="!item.isChargeCodePagination"
+    class="code long-code break"
+  >
+    <em ng-if="item.isChargeGroup">{{ item.section }}</em>
+    <span ng-if="item.isChargeGroup"
+      class="icons icon-double-arrow"></span>
+    <em ng-if="item.isChargeCode">Attractions</em>
+  </td>
+
+	<td ng-if="!item.isChargeCodePagination"
+    class="break"
+  >
+    {{ item.today | currency:currencySymbol:2 }}
+  </td>
+
+	<td ng-if="!item.isChargeCodePagination">
+    {{ item.mtd | currency:currencySymbol:2 }}
+  </td>
+
+	<td ng-if="!item.isChargeCodePagination">
+    {{ item.last_year_mtd | currency:currencySymbol:2 }}
+  </td>
+
+	<td ng-if="!item.isChargeCodePagination"
+    class="break"
+    ng-class="{ 'red': item.mtd_variance < 0 }"
+  >
+    {{ item.mtd_variance | currency:currencySymbol:2 }}
+  </td>
+
+	<td ng-if="!item.isChargeCodePagination">
+    {{ item.ytd | currency:currencySymbol:2 }}
+  </td>
+
+	<td ng-if="!item.isChargeCodePagination">
+    {{ item.last_year_ytd | currency:currencySymbol:2 }}
+  </td>
+
+	<td ng-if="!item.isChargeCodePagination"
+    ng-class="{ 'red': item.ytd_variance < 0 }"
+  >
+    {{ item.ytd_variance | currency:currencySymbol:2 }}
+  </td>
 </tr>
