CICO-36186: testing pre-integration

--- a/rover/partials/reports/comparisonStatReport/rvComparisonStatReportRow.html
+++ b/rover/partials/reports/comparisonStatReport/rvComparisonStatReportRow.html
@@ -39,7 +39,7 @@
     'active': item.chageGroupActive,
 
     'charge-code': item.isChargeCode,
-    'hidden': item.isChargeCode && !item.chageGroupActive
+    'hidden': (item.isChargeCode && !item.chageGroupActive),
     'charge-pagination': item.isChargeCodePagination,
 
     'odd': $odd,
