--- a/admin/partials/housekeeping/adHousekeeping.html
+++ b/admin/partials/housekeeping/adHousekeeping.html
@@ -9,7 +9,7 @@
 				<fieldset class="holder left">
 					<ad-toggle-button label="{{'USE_INSPECTED_ROOM_STATUS' | translate}}" is-checked="data.use_inspected" div-class=""></ad-toggle-button>
 					<ad-toggle-button label="{{'USE_PICKUP_ROOM_STATUS' | translate}}" is-checked="data.use_pickup" div-class=""></ad-toggle-button>
-					<ad-toggle-button is-hide="isStandAlone" label="{{'ENABLE_QUEUE_ROOMS' | translate}}" is-checked="data.is_queue_rooms_on" div-class=""></ad-toggle-button>
+					<ad-toggle-button label="{{'ENABLE_QUEUE_ROOMS' | translate}}" is-checked="data.is_queue_rooms_on" div-class=""></ad-toggle-button>
 					<ad-toggle-button label="{{'ENABLE_ADVANCED_QUEUE_PRECHECKIN' | translate}}" is-hide="isStandAlone" is-checked="advanced_queue_flow_enabled" div-class=""></ad-toggle-button>
 					<ad-toggle-button label="{{'ROOM ASSIGNMENT HIGHEST TO LOWEST' | translate}}" is-checked="data.list_rooms_in_highest_to_lowest_floor_order" div-class=""></ad-toggle-button>
 					<ad-toggle-button label="{{'ROOM READY NOTIFICATION' | translate}}" is-checked="data.is_room_ready_notification_on" div-class=""></ad-toggle-button>
