CICO-34119 fixes button color in checkin flow

--- a/zest_station/css/themes/sohotel/theme.less
+++ b/zest_station/css/themes/sohotel/theme.less
@@ -87,6 +87,11 @@
 					color: #dedfdc
 				}
 			}
+			.button{
+				&.transparent{
+					background: fade(@actionBackground, 80%);
+				}
+			}
 		}
 
 		#header {
