CICO-35788 API Integration for Endpoints

--- a/admin/partials/ExactOnline/setup/adExactOnlineSetup.html
+++ b/admin/partials/ExactOnline/setup/adExactOnlineSetup.html
@@ -14,11 +14,11 @@
             <ad-form-title full-width="true" form-title="{{'EXACT_ONLINE_SUB_TITLE'| translate}}"></ad-form-title>
 
             <fieldset class="holder left">
-                <ad-dropdown-name savemodel="exactOnlineSetup.url"
-                                  valueproperty="code"
+                <ad-dropdown-name savemodel="exactOnlineSetup.endpoint"
+                                  valueproperty="endpoint"
                                   property="description"
-                                  list="urls"
-                                  label="{{'URL'| translate}}"
+                                  list="endPoints"
+                                  label="{{'ENDPOINT'| translate}}"
                                   div-class="full-width"
                                   prefix-value="true">
                 </ad-dropdown-name>
