--- a/stylesheets/less/app/screens/05.reservation-card.less
+++ b/stylesheets/less/app/screens/05.reservation-card.less
@@ -1039,6 +1039,9 @@
                             margin-right: 10px;
                             .calc-width(60, 65);
                             .pull-left;
+                            &.no-bg input {
+                                width: 100%;
+                            }
                         }
 
                         input {
