CICO-36252 Updated auth text for great wolf

--- a/guestweb/common_templates/partials/greatWolf/gwCheckinCCAddition.html
+++ b/guestweb/common_templates/partials/greatWolf/gwCheckinCCAddition.html
@@ -29,7 +29,7 @@
         <div class="col-md-1"></div>
         <div class="col-md-4 top-spacing">
             <p class="main-text">Payment Info</p>
-            <p class="sub-main-text">When checked in there will be a $50 per night authorization which will provide room charging privileges. Please enter your credit card or debit card information.</p>
+            <p class="sub-main-text">When checked in there will be an additional $50 per stay authorization to provide room charging privileges. Please enter your credit card or debit card information.</p>
         </div>
         <div class="col-md-2"></div>
         <div class="col-md-4 top-spacing">
