--- a/rover/partials/bill/rvBillingInformationPopup.html
+++ b/rover/partials/bill/rvBillingInformationPopup.html
@@ -1,6 +1,8 @@
 <div id="modal" class="modal-show" ng-class="{'modal-show': !modalClosing}" role="dialog" ng-cloak>
-   <form ng-hide="showSixPayLoader" class="modal-content billing-information" ng-class="{'add-card':saveData.newPaymentFormVisible, 'has-error': escapeNull(errorMessage) !== ''}">
-   <button id="modal-close" type="button" class="dark-title modal-close" ng-click="handleCloseDialog()"><span class="icons icon-close"></button>
+   <form ng-hide="showSixPayLoader" id="billing-information" name="billing-information" class="modal-content billing-information" ng-class="{'add-card':saveData.newPaymentFormVisible, 'has-error': escapeNull(errorMessage) !== ''}">
+      <button id="modal-close" type="button" class="dark-title modal-close" ng-click="handleCloseDialog()">
+         <span class="icons icon-close">
+      </button>
       <div class="modal-header">
          <h1 translate>BILLING_INFO_TITLE</h1>
          <em ng-if = "billingEntity !== 'TRAVEL_AGENT_DEFAULT_BILLING' && billingEntity !== 'COMPANY_CARD_DEFAULT_BILLING' && billingEntity !=='GROUP_DEFAULT_BILLING' && billingEntity !=='ALLOTMENT_DEFAULT_BILLING'"><span translate>CONFIRMATION_LABEL</span> #{{reservationData.confirm_no}}</em>
@@ -12,16 +14,15 @@
          <button type="button" id="new-route" class="button" ng-class = "{'green': isInitialPage, 'white':!isInitialPage}" ng-click="headerButtonClicked()" ng-hide="billingEntity ==='ALLOTMENT_DEFAULT_BILLING' || billingEntity === 'TRAVEL_AGENT_DEFAULT_BILLING' || billingEntity === 'COMPANY_CARD_DEFAULT_BILLING' || billingEntity === 'GROUP_DEFAULT_BILLING'">{{getHeaderButtonLabel()}}</button>
          <button type="button" class="button red" ng-click="deleteBillingInfo()" ng-show="billingEntity === 'TRAVEL_AGENT_DEFAULT_BILLING' || billingEntity === 'COMPANY_CARD_DEFAULT_BILLING'" translate>DELETE</button>
       </div>
-      <div style="position: relative;overflow: hidden;height:510px;">
-         <div class = "wrapper">
-            <div ng-include="'/assets/partials/common/notification_message.html'"></div>
-            <!-- Billing Info Content -->
-            <div ng-if = "isInitialPage" class="billing-info-body" ng-include="'/assets/partials/bill/rvAllRoutes.html'" ></div>
 
-            <div ng-if = "(!isInitialPage && !isEntitySelected)" class="billing-info-entity" ng-include="'/assets/partials/bill/rvSelectEntity.html'"></div>
+      <div ng-include="'/assets/partials/common/notification_message.html'"></div>
+         
+      <!-- Billing Info Content include-replace -->
+      <div ng-show = "isInitialPage" ng-include="'/assets/partials/bill/rvAllRoutes.html'"></div>
 
-            <div ng-if = "(!isInitialPage && isEntitySelected)" class="billing-info-body" ng-include="'/assets/partials/bill/rvRouteDetails.html'"  > </div>
-         </div>
-      </div>
+      <div ng-show = "(!isInitialPage && !isEntitySelected)" ng-include="'/assets/partials/bill/rvSelectEntity.html'"></div>
+
+      <div ng-show = "(!isInitialPage && isEntitySelected)" ng-include="'/assets/partials/bill/rvRouteDetails.html'"> </div>
+      
    </form>
 </div>
