--- a/stylesheets/less/app/screens/13.reservations.less
+++ b/stylesheets/less/app/screens/13.reservations.less
@@ -1405,7 +1405,30 @@
 
                         tfoot {
                             tr {
-                                td { padding: 0; }
+                                td { padding: 0; border: 0; }
+
+                                &:nth-child(2) {
+                                    td {
+                                        padding-top: 5px;
+                                        
+                                        &.total-value,
+                                        &.total-label {
+                                            border-top: 1px solid rgba(0,0,0,.1);
+                                        }
+                                    }
+                                }
+
+                                &.tax {
+                                    td {
+
+                                        &.total-value,
+                                        &.total-label {
+                                            font-weight: 400;
+                                            color: @grey3;
+                                            font-size: 14px;
+                                        }
+                                    }
+                                }
                             }
                         }
                     }
