--- a/rover/partials/reports/comparisonStatReport/rvComparisonStatReportRow.html
+++ b/rover/partials/reports/comparisonStatReport/rvComparisonStatReportRow.html
@@ -1,3 +1,23 @@
+is_ledger
+  today
+  mtd
+  last_year_mtd
+  mtd_variance
+  ytd
+  last_year_ytd
+  ytd_variance
+
+<tr ng-repeat="item in ledgerEntries">
+	<td class="code long-code break">{{ item.section }}</td>
+	<td class="break">{{ item.today | currency:currencySymbol:2 }}</td>
+	<td>{{ item.mtd | currency:currencySymbol:2 }}</td>
+	<td>{{ item.last_year_mtd | currency:currencySymbol:2 }}</td>
+	<td class="break" ng-class="{ 'red': item.mtd_variance < 0 }">{{ item.mtd_variance | currency:currencySymbol:2 }}</td>
+	<td>{{ item.ytd | currency:currencySymbol:2 }}</td>
+	<td>{{ item.last_year_ytd | currency:currencySymbol:2 }}</td>
+	<td ng-class="{ 'red': item.ytd_variance < 0 }">{{ item.ytd_variance | currency:currencySymbol:2 }}</td>
+</tr>
+
 <tr ng-repeat="item in staticEntries">
 	<td class="code long-code break">{{ item.section }}</td>
 	<td class="break">{{ item.today }}</td>
@@ -9,7 +29,7 @@
 	<td ng-class="{ 'red': item.ytd_variance < 0 }">{{ item.ytd_variance }}</td>
 </tr>
 
-<tr class="total" ng-repeat="item in totalEntry">
+<tr class="total" ng-repeat="item in totalEntries">
 	<td class="code long-code break">{{ item.section }}</td>
 	<td class="break">{{ item.today | currency:currencySymbol:2 }}</td>
 	<td>{{ item.mtd | currency:currencySymbol:2 }}</td>
